RESOLVED FIXED50601
The plug-in process crashes if it can't load the plug-in module
https://bugs.webkit.org/show_bug.cgi?id=50601
Summary The plug-in process crashes if it can't load the plug-in module
Anders Carlsson
Reported 2010-12-06 17:06:19 PST
The plug-in process crashes if it can't load the plug-in module
Attachments
Patch (6.57 KB, patch)
2010-12-06 17:09 PST, Anders Carlsson
sam: review+
Anders Carlsson
Comment 1 2010-12-06 17:07:25 PST
Anders Carlsson
Comment 2 2010-12-06 17:09:05 PST
Anders Carlsson
Comment 3 2010-12-06 17:23:50 PST
WebKit Review Bot
Comment 4 2010-12-06 18:11:40 PST
Attachment 75757 [details] did not pass style-queue: Failed to run "[u'git', u'reset', u'--hard', u'HEAD']" exit_code: 128 error: Could not write new index file. fatal: Could not reset index file to revision 'HEAD'. If any of these errors are false positives, please file a bug against check-webkit-style.
Note You need to log in before you can comment on or make changes to this bug.