The plug-in process crashes if it can't load the plug-in module https://bugs.webkit.org/show_bug.cgi?id=50601 <rdar://problem/8692654>

Reviewed by Sam Weinig.

* PluginProcess/PluginControllerProxy.cpp:
(WebKit::PluginControllerProxy::initialize):
Handle m_plugin being 0.

* PluginProcess/PluginProcess.cpp:
(WebKit::PluginProcess::netscapePluginModule):
Create the plug-in module if it doesn't exist.

(WebKit::PluginProcess::initialize):
Store the plug-in path.

* PluginProcess/PluginProcess.h:
* WebProcess/Plugins/Netscape/NetscapePlugin.cpp:
(WebKit::NetscapePlugin::create):
Return null if the plug-in module doesn't exist.

* WebProcess/Plugins/Netscape/NetscapePlugin.h:
* WebProcess/WebPage/WebPage.cpp:
(WebKit::WebPage::createPlugin):
Simplify code.

Canonical link: https://commits.webkit.org/63837@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@73419 268f45cc-cd09-0410-ab3c-d52691b4dbfc