WebKit2/PluginProcess/PluginProcess.cpp
@@ -76,6 +76,16 @@ void PluginProcess::removeWebProcessConnection(WebProcessConnection* webProcessC
     }
 }
 
+NetscapePluginModule* PluginProcess::netscapePluginModule()
+{
+    if (!m_pluginModule) {
+        ASSERT(!m_pluginPath.isNull());
+        m_pluginModule = NetscapePluginModule::getOrCreate(m_pluginPath);
+    }
+
+    return m_pluginModule.get();
+}
+
 void PluginProcess::didReceiveMessage(CoreIPC::Connection* connection, CoreIPC::MessageID messageID, CoreIPC::ArgumentDecoder* arguments)
 {
     didReceivePluginProcessMessage(connection, messageID, arguments);
@@ -96,7 +106,7 @@ void PluginProcess::initialize(const PluginProcessCreationParameters& parameters
 {
     ASSERT(!m_pluginModule);
 
-    m_pluginModule = NetscapePluginModule::getOrCreate(parameters.pluginPath);
+    m_pluginPath = parameters.pluginPath;
 
 #if USE(ACCELERATED_COMPOSITING) && PLATFORM(MAC)
     m_compositingRenderServerPort = parameters.acceleratedCompositingPort.port();
